--- a/src/qt/spectrumx.qrc
+++ b/src/qt/spectrumx.qrc
@@ -43,12 +43,12 @@
         <file alias="tx_input">res/icons/tx_input.png</file>
         <file alias="tx_output">res/icons/tx_output.png</file>
         <file alias="tx_inout">res/icons/tx_inout.png</file>
-        <file alias="unit_spe">res/icons/unit_spe.png</file>
-        <file alias="unit_mspe">res/icons/unit_mspe.png</file>
-        <file alias="unit_uspe">res/icons/unit_uspe.png</file>
-        <file alias="unit_tspe">res/icons/unit_tspe.png</file>
-        <file alias="unit_tmspe">res/icons/unit_tmspe.png</file>
-        <file alias="unit_tuspe">res/icons/unit_tuspe.png</file>
+        <file alias="unit_bitg">res/icons/unit_bitg.png</file>
+        <file alias="unit_mbitg">res/icons/unit_mbitg.png</file>
+        <file alias="unit_ubitg">res/icons/unit_ubitg.png</file>
+        <file alias="unit_tbitg">res/icons/unit_tbitg.png</file>
+        <file alias="unit_tmbitg">res/icons/unit_tmbitg.png</file>
+        <file alias="unit_tubitg">res/icons/unit_tubitg.png</file>
         <file alias="lock_closed">res/icons/lock_closed.png</file>
         <file alias="lock_open">res/icons/lock_open.png</file>
         <file alias="key">res/icons/key.png</file>
